--- a/style.css
+++ b/style.css
@@ -54,4 +54,98 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   src: url('fonts/icomoon.woff') format('woff'), url('fonts/icomoon.ttf') format('truetype'); }
 
 body {
-  background: gold; }
+  background: blue;
+  font-family: 'Lato', sans-serif; }
+
+#wrapper {
+  position: relative; }
+
+#header {
+  background-color: #FFF; }
+
+#ft-utility {
+  height: 50px;
+  background: #5c5b5c;
+  color: #FFF; }
+  #ft-utility a {
+    color: #FFF; }
+  #ft-utility #menu-toggle {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    float: right;
+    background-color: blue; }
+
+#site-title h1 a {
+  background: url('images/logo.png') center center no-repeat;
+  width: 175px;
+  height: 81px;
+  display: inline-block;
+  text-indent: -9999px; }
+
+#site-description, #search {
+  display: none; }
+
+#branding {
+  padding: 30px; }
+
+.menu {
+  display: none; }
+  .menu li {
+    display: block; }
+  .menu a {
+    font-size: 22px;
+    font-family: "Aller";
+    color: #333;
+    font-weight: 300;
+    text-decoration: none;
+    display: inline-block;
+    transition: .3s all; }
+
+.mobile-menu {
+  background: #5c5b5c;
+  text-align: center;
+  display: none;
+  position: absolute;
+  top: 50px;
+  right: 0;
+  opacity: 0;
+  min-height: 0;
+  overflow: hidden;
+  width: 80%;
+  min-width: 320px;
+  transition: .3s heihgt, .8s opacity;
+  z-index: 2; }
+  .mobile-menu li {
+    display: block; }
+  .mobile-menu a {
+    color: #FFF;
+    line-height: 50px;
+    width: 100%;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
+    .mobile-menu a:hover {
+      background: rgba(0, 0, 0, 0.1); }
+  body.mobile-menu-active .mobile-menu {
+    display: inline-block;
+    opacity: 1;
+    min-height: 2000px; }
+
+#footer {
+  background: #db7c00;
+  padding: 40px 0;
+  color: #FFF; }
+  #footer h2 {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    padding: 5px 0;
+    font-weight: bold;
+    margin-bottom: 10px; }
+  #footer a {
+    color: #FFF;
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    padding: 5px 0;
+    font-weight: normal;
+    text-decoration: none; }
